Add recipe pages

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="./recipes/boursin-omelet.html">Boursin omelete</a>
+    <a href="./recipes/carrot-cake.html">Carrot cake</a>
+    <a href="./recipes/oats.html">Oats</a>
+    <a href="./recipes/sandwiches.html">Sandwiches</a>
+    <a href="./recipes/sticky-buns.html">Sticky Buns</a>
 </body>
 </html>
