Add recipes page content

--- a/recipes/oats.html
+++ b/recipes/oats.html
@@ -8,5 +8,25 @@
 <body>
     <h1>Oats</h1>
     <a href="../index.html">Home</a>
+    <img src="img/oats.jpg" alt="Oats" height="310" width="310">
+    <p>I love this overnight oats recipe! It's easy to make-ahead for a quick, on-the-go breakfast. You can add-in your favorite toppings, fruit, or nuts.</p>
+    <h2>Ingridients</h2>
+    <ul>
+        <li>⅔ cup warm water</li>
+        <li>⅔ cup warm milk</li>
+        <li>2 teaspoons active dry yeast</li>
+        <li>2 tablespoons white sugar</li>
+        <li>1 large egg, beaten</li>
+        <li>6 tablespoons unsalted butter, melted</li>
+        <li>4 cups all-purpose flour, or more as needed</li>
+        <li>1 ½ teaspoons fine salt</li>
+    </ul>
+    <h2>Steps</h2>
+    <ul>
+        <li>Combine warm water and milk in a mixing bowl and sprinkle yeast over.</li>
+        <li>Add sugar, egg, and melted butter for dough to the yeast mixture.</li>
+        <li>While dough is rising, preheat the oven to 375 degrees F (190 degrees C).</li>
+        <li>Remove from the oven onto a wire rack and let cool for 5 minutes.</li>
+    </ul>
 </body>
 </html>
