--- a/recipes/carrot-cake.html
+++ b/recipes/carrot-cake.html
@@ -8,5 +8,25 @@
 <body>
     <h1>Carrot Cake</h1>
     <a href="../index.html">Home</a>
+    <img src="img/carrot-cake.jpg" alt="Carot Cake" height="310" width="310">
+    <p>This carrot cake recipe with a homemade cream cheese frosting is my favorite, and I have tried many carrot cakes! It's moist, easy to make with grated carrots, and so delicious!</p>
+    <h2>Ingridients</h2>
+    <ul>
+        <li>⅔ cup warm water</li>
+        <li>⅔ cup warm milk</li>
+        <li>2 teaspoons active dry yeast</li>
+        <li>2 tablespoons white sugar</li>
+        <li>1 large egg, beaten</li>
+        <li>6 tablespoons unsalted butter, melted</li>
+        <li>4 cups all-purpose flour, or more as needed</li>
+        <li>1 ½ teaspoons fine salt</li>
+    </ul>
+    <h2>Steps</h2>
+    <ul>
+        <li>Combine warm water and milk in a mixing bowl and sprinkle yeast over.</li>
+        <li>Add sugar, egg, and melted butter for dough to the yeast mixture.</li>
+        <li>While dough is rising, preheat the oven to 375 degrees F (190 degrees C).</li>
+        <li>Remove from the oven onto a wire rack and let cool for 5 minutes.</li>
+    </ul>
 </body>
 </html>
