--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/boursin-omelet.html">Boursin omelete</a>
-    <a href="./recipes/carrot-cake.html">Carrot cake</a>
-    <a href="./recipes/oats.html">Oats</a>
-    <a href="./recipes/sandwiches.html">Sandwiches</a>
-    <a href="./recipes/sticky-buns.html">Sticky Buns</a>
+    <ul>
+        <li><a href="./recipes/boursin-omelet.html">Boursin omelete</a></li>
+        <li><a href="./recipes/carrot-cake.html">Carrot cake</a></li>
+        <li><a href="./recipes/oats.html">Oats</a></li>
+        <li><a href="./recipes/sandwiches.html">Sandwiches</a></li>
+        <li><a href="./recipes/sticky-buns.html">Sticky Buns</a></li>
+        <li><a href="./recipes/cabbage-soup.html">Cabage Soup</a></li>
+        <li><a href="./recipes/cookie.html">Cookies</a></li>
+    </ul>
 </body>
 </html>
