Add CSS Styling

--- a/recipes/carrot-cake.html
+++ b/recipes/carrot-cake.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Carrot Cake</title>
 </head>
 <body>
-    <h1>Carrot Cake</h1>
-    <a href="../index.html">Home</a>
+    <a class="link" href="../index.html">Home</a>
+    <h1 class="main-header">Carrot Cake</h1>
     <img src="img/carrot-cake.jpg" alt="Carot Cake" height="310" width="310">
     <p>This carrot cake recipe with a homemade cream cheese frosting is my favorite, and I have tried many carrot cakes! It's moist, easy to make with grated carrots, and so delicious!</p>
-    <h2>Ingridients</h2>
+    <h2  class="sub-header">Ingridients</h2>
     <ul>
         <li>⅔ cup warm water</li>
         <li>⅔ cup warm milk</li>
@@ -21,7 +22,7 @@
         <li>4 cups all-purpose flour, or more as needed</li>
         <li>1 ½ teaspoons fine salt</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="sub-header">Steps</h2>
     <ul>
         <li>Combine warm water and milk in a mixing bowl and sprinkle yeast over.</li>
         <li>Add sugar, egg, and melted butter for dough to the yeast mixture.</li>
