--- a/recipes/cookie.html
+++ b/recipes/cookie.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Cookie</title>
 </head>
 <body>
-    <h1>Cookie</h1>
-    <a href="../index.html">Home</a>
+    <a class="link" href="../index.html">Home</a>
+    <h1 class="main-header">Cookie</h1>
     <img src="img/cookie.jpg" alt="Oats" height="310" width="310">
     <p>This sugar cookie frosting is made with confectioners' sugar and shortening instead of butter so it's less likely to melt. It has a lovely vanilla flavor. It's quick and easy to make and works well on both soft and crisp sugar cookies. It starts out soft and spreadable but firms up nicely for cookie stacking and storage.</p>
-    <h2>Ingridients</h2>
+    <h2 class="sub-header">Ingridients</h2>
     <ul>
         <li>⅔ cup warm water</li>
         <li>⅔ cup warm milk</li>
@@ -21,7 +22,7 @@
         <li>4 cups all-purpose flour, or more as needed</li>
         <li>1 ½ teaspoons fine salt</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="sub-header">Steps</h2>
     <ul>
         <li>Combine warm water and milk in a mixing bowl and sprinkle yeast over.</li>
         <li>Add sugar, egg, and melted butter for dough to the yeast mixture.</li>
