--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/boursin-omelet.html">Boursin omelete</a></li>
-        <li><a href="./recipes/carrot-cake.html">Carrot cake</a></li>
-        <li><a href="./recipes/oats.html">Oats</a></li>
-        <li><a href="./recipes/sandwiches.html">Sandwiches</a></li>
-        <li><a href="./recipes/sticky-buns.html">Sticky Buns</a></li>
-        <li><a href="./recipes/cabbage-soup.html">Cabage Soup</a></li>
-        <li><a href="./recipes/cookie.html">Cookies</a></li>
+    <h1 class="main-header">Odin Recipes</h1>
+    <ul class="ing-links">
+        <li><a class="link" href="./recipes/boursin-omelet.html">Boursin omelete</a></li>
+        <li><a class="link" href="./recipes/carrot-cake.html">Carrot cake</a></li>
+        <li><a class="link" href="./recipes/oats.html">Oats</a></li>
+        <li><a class="link" href="./recipes/sandwiches.html">Sandwiches</a></li>
+        <li><a class="link" href="./recipes/sticky-buns.html">Sticky Buns</a></li>
+        <li><a class="link" href="./recipes/cabbage-soup.html">Cabage Soup</a></li>
+        <li><a class="link" href="./recipes/cookie.html">Cookies</a></li>
     </ul>
 </body>
 </html>
