--- a/recipes/sticky-buns.html
+++ b/recipes/sticky-buns.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Sticky Buns</title>
 </head>
 <body>
-    <h1>Sticky Buns</h1>
-    <a href="../index.html">Home</a>
+    <a class="link" href="../index.html">Home</a>
+    <h1 class="main-header">Sticky Buns</h1>
     <img src="img/sticky-buns.jpg" alt="Sticky Buns" height="310" width="310">
     <p>The first recipe I made for my family after my first semester of culinary school was sticky buns. Ever since then, they've had a special place in my heart. It's been my experience with baking that the harder a dough is to work with, the better it comes out and this is no exception — the contrast between this beautifully tender, airy dough and the sweet, crunchy, sticky topping is just otherworldly.</p>
-    <h2>Ingridients</h2>
+    <h2 class="sub-header">Ingridients</h2>
     <ul>
         <li>⅔ cup warm water</li>
         <li>⅔ cup warm milk</li>
@@ -21,7 +22,7 @@
         <li>4 cups all-purpose flour, or more as needed</li>
         <li>1 ½ teaspoons fine salt</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="sub-header">Steps</h2>
     <ul>
         <li>Combine warm water and milk in a mixing bowl and sprinkle yeast over.</li>
         <li>Add sugar, egg, and melted butter for dough to the yeast mixture.</li>
